--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "example-broker",
+  "name": "json-placeholder-sample",
   "version": "1.0.0",
-  "description": "Example K2 Broker",
+  "description": "Example K2 Broker using JSON Placeholder",
   "homepage": "https://www.k2.com",
   "license": "MIT",
-  "private": true,
   "author": {
     "name": "K2 OSS",
     "email": "oss@k2.com",
