--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "json-placeholder-sample",
+  "name": "example-broker",
   "version": "1.0.0",
-  "description": "Example K2 Broker using JSON Placeholder",
+  "description": "Example K2 Broker",
   "homepage": "https://www.k2.com",
   "license": "MIT",
+  "private": true,
   "author": {
     "name": "K2 OSS",
     "email": "oss@k2.com",
@@ -50,7 +51,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@babel/register": "^7.8.3",
     "@babel/runtime": "^7.8.3",
-    "@k2oss/k2-broker-core": "1.0.0-preview-20200129-0",
+    "@k2oss/k2-broker-core": "1.0.0-preview-20200217-0",
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
